--- a/index.html
+++ b/index.html
@@ -70,15 +70,14 @@
       </div>
     </div>
   </header>
-
   <div id="fh5co-started" class="fh5co-bg-dark">
     <div class="overlay"></div>
     <div class="container">
       <div class="row animate-box">
         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-          <h2>Mời BOT</h2>
-          <p>Chỉ cần ấn "Mời Bot tại đây" để mời bot vào server của bạn ! .</p>
-          <p><a href="https://cdn.discordapp.com/attachments/823243240148041758/" class="btn btn-default btn-lg">Mời Bot tại đây</a></p>
+          <h2>Them bot tại đây !</h2>
+          <p>Ấn Thêm bot tại đây để tiếp tục thêm bot vào server .</p>
+          <p><a href="https://discord.com/oauth2/authorize?client_id=843760536063049739&permissions=8&scope=bot" class="btn btn-default btn-lg">Thêm Bot </a></p>
         </div>
       </div>
     </div>
