--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>&copy; 2021 , Xin chào <br> Web được thực hiện khi bạn mua thẻ CV card tại <a href="www.echxanh.xyz" target="_blank">Echxanh</a> Demo  <a href="Echxanh.xyz" target="_blank">Hình Ảnh</a></p>
+          <p>&copy; 2021 , Xin chào <br> Web được thực hiện khi bạn mua thẻ CV card tại <a href="www.echxanh.tk" target="_blank">Echxanh</a> Demo  <a href="Echxanh.xyz" target="_blank">Hình Ảnh</a></p>
         </div>
       </div>
     </div>
