--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Profile &mdash; Lê Hoài Lam (echxanh)</title>
+  <title>Profile &mdash; ECHXANH MUSIC (echxanh)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Profile&mdash;Lê Hoài Lam (echxanh) " />
+  <meta name="description" content="Profile&mdash;ECHXANH MUSIC (echxanh) " />
   <meta name="keywords" content="echxanh" />
-  <meta name="author" content="Lê Hoài Lam" />
+  <meta name="author" content="ECHXANH MUSIC" />
 
     <!-- Facebook and Twitter integration -->
   <meta property="og:title" content=""/>
